--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app-fortest-week6",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,8 +9,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^16.6.1",
+    "next": "15.5.2",
+    "node-fetch": "^3.3.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.2"
+    "react-dom": "19.1.0"
   }
 }
